--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,13 @@
 {
-  "extends": "next/core-web-vitals"
+  "env": {
+    "browser": true,
+    "es2021": true,
+    "node": true
+  },
+  "extends": ["next/core-web-vitals", "plugin:@typescript-eslint/recommend", "prettier"],
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  }
 }
