--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
     "es2021": true,
     "node": true
   },
-  "extends": ["next/core-web-vitals", "plugin:@typescript-eslint/recommend", "prettier"],
+  "extends": ["next/core-web-vitals", "prettier"],
   "settings": {
     "react": {
       "version": "detect"
